--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -3,3 +3,28 @@
 ============= */
 
 
+body{
+    p, h1, h2, h3, h4{
+        margin: 0;
+        padding: 0;
+    }
+    ul{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        
+    }
+}
+
+.base-grid{
+
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas:
+    ". section .";
+
+    >div{
+        grid-area: section;
+    }
+
+}
