work and organization

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,3 +19,9 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/homepage/_homepage-hero";
+@import "sections/homepage/_services";
+@import "sections/homepage/_cafe";
+@import "sections/homepage/_community";
+
+
