--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -404,3 +404,31 @@ textarea {
 /* =============
     Footer
 ============= */
+/* =============
+    homepage hero
+============= */
+.service-grid ul {
+  display: grid;
+  gap: 16px;
+  grid-template-columns: 50% auto;
+  grid-template-areas: "floral plants" "cafe gifts";
+}
+.service-grid ul #floral {
+  grid-area: floral;
+}
+.service-grid ul #plants {
+  grid-area: plants;
+}
+.service-grid ul #cafe {
+  grid-area: cafe;
+}
+.service-grid ul #gifts {
+  grid-area: gifts;
+}
+
+/* =============
+    cafe
+============= */
+/* =============
+    community
+============= */
