--- a/dev/scss/sections/homepage/_services.scss
+++ b/dev/scss/sections/homepage/_services.scss
@@ -26,7 +26,7 @@
         #plants{
             grid-area: plants;
         }
-        #cafe{
+        #cafe-services{
             grid-area: cafe;
         }
         #gifts{
