--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -4,18 +4,21 @@
 
 // Define the breakpoints
 // Small tablets and large smartphones
-$screen-sm-min: 576px;
+$screen-sm-min: 432px;
 
 // Small tablets
-$screen-md-min: 768px;
+$screen-md-min: 834px;
 
 // Large tablets and small desktops
 $screen-lg-min: 1024px;
 
-// Large desktops
-$screen-xl-min: 1200px;
 
 
-// Colors
-$white: #fff;
-$black: #000;
+
+
+:root{
+    --white: #ffffff;
+    --champagne-pink-light: #F3DFDA;
+    --ruddy-bronze-light: #421908;
+    
+}
