--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -10,6 +10,12 @@ html {
 /* =============
     Variables
 ============= */
+:root {
+  --white: #ffffff;
+  --champagne-pink-light: #F3DFDA;
+  --ruddy-bronze-light: #421908;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -371,9 +377,62 @@ body ul {
   grid-area: section;
 }
 
+.base-space {
+  margin-top: 30px;
+}
+
 /* =============
     Typography
 ============= */
+h1, h2, h3, h4, p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  color: var(--ruddy-bronze-light);
+}
+
+.par1 {
+  font-size: 1rem;
+  line-height: 20px;
+}
+
+.par2 {
+  font-size: 1.125rem;
+  line-height: 22px;
+}
+
+.par3 {
+  font-size: 1.5rem;
+  line-height: 29px;
+}
+
+.par4 {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 39px;
+}
+
+.header1 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  line-height: 49px;
+}
+
+.header2 {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 59px;
+}
+
+.header2 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  line-height: 68px;
+}
+
+.section-title {
+  text-align: center;
+}
+
 /* =============
     Buttons
 ============= */
@@ -422,23 +481,55 @@ footer #icons {
 /* =============
     homepage hero
 ============= */
+#homepage-hero {
+  text-align: center;
+}
+#homepage-hero #home-hero-img {
+  width: 100vw;
+  height: 40vw;
+  background-image: url("../img/homepage/homepage-hero.png");
+  background-size: cover;
+  background-position: 10% 100%;
+}
+#homepage-hero #hero-copy {
+  position: absolute;
+  top: 100px;
+  width: 100vw;
+  filter: drop-shadow(-10, -3, #421908);
+}
+#homepage-hero #hero-copy h1 {
+  font-family: "BenchNine", sans-serif;
+  font-size: 2rem;
+  color: var(--white);
+  letter-spacing: 1rem;
+}
+#homepage-hero #hero-copy h2 {
+  font-family: "Playfair Display", serif;
+  font-size: 0.78125rem;
+  color: var(--white);
+  letter-spacing: 0.5rem;
+  margin-top: 20px;
+}
+
 .service-grid ul {
   display: grid;
   gap: 16px;
   grid-template-columns: 50% auto;
-  grid-template-areas: "floral plants" "cafe gifts";
 }
-.service-grid ul #floral {
-  grid-area: floral;
+.service-grid .service-card h4 {
+  padding-top: 8px;
 }
-.service-grid ul #plants {
-  grid-area: plants;
+.service-grid .service-card img {
+  padding-top: 6px;
 }
-.service-grid ul #cafe-services {
-  grid-area: cafe;
+.service-grid .service-card p {
+  padding-top: 6px;
 }
-.service-grid ul #gifts {
-  grid-area: gifts;
+
+#service-cards-all {
+  background-color: var(--champagne-pink-light);
+  padding-top: 8px;
+  padding-bottom: 16px;
 }
 
 /* =============
