--- a/dev/scss/sections/homepage/_services.scss
+++ b/dev/scss/sections/homepage/_services.scss
@@ -1,11 +1,5 @@
 #services{
 
-    // li{
-    //     img{
-    //         width: 100%;
-    //     }
-    // }
-
 
 
 }
@@ -17,23 +11,25 @@
         display: grid;
         gap: 16px;
         grid-template-columns: 50% auto;
-        grid-template-areas: 
-        "floral plants"
-        "cafe gifts";
-        #floral{
-            grid-area: floral;
-        }
-        #plants{
-            grid-area: plants;
-        }
-        #cafe-services{
-            grid-area: cafe;
-        }
-        #gifts{
-            grid-area: gifts;
-        }
     }
     
+.service-card{
+    h4{
+        padding-top: 8px;
+    }
+    img{
+        padding-top: 6px;
+        // width: 100%;
+    }
+    p{
+        padding-top: 6px;
+    }
+}
 
+}
 
+#service-cards-all{
+    background-color: var(--champagne-pink-light);
+    padding-top: 8px;
+    padding-bottom: 16px;
 }
