--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -19,6 +19,12 @@ $screen-lg-min: 1024px;
 :root{
     --white: #ffffff;
     --champagne-pink-light: #F3DFDA;
+    --champagne-pink-dark: #90817D;
     --ruddy-bronze-light: #421908;
+    --indigo-dark: #516189;
+    --seashell-dark: #FBF7F4;
+    --tea-green: #D2ECC5;
+    --tea-green-dark: #7E8E76;
+    
     
 }
