--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -5,6 +5,7 @@
 
 footer{
     #newsletter{
+        padding-top: 42px;
         display: grid;
         grid-template-columns: 38px auto 38px;
         grid-template-areas:
@@ -15,10 +16,26 @@ footer{
         }
         form{
             display: flex;
+            margin-bottom: 42px;
+            input{
+                width: 100%;
+                margin-right: 7px;
+            }
         }
+        h3{
+            margin-bottom: 20px;
+            margin-top: 5px;
+        }
+
+        background-color: var(--tea-green);
+        border-radius: 0 0 16px 16px;
     }
 
-    #icons{
+    #brand-icons{
         display: flex;
+    }
+
+    #newsletter-btn{
+        margin-left: 16px;
     }
 }
