--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -13,7 +13,12 @@ html {
 :root {
   --white: #ffffff;
   --champagne-pink-light: #F3DFDA;
+  --champagne-pink-dark: #90817D;
   --ruddy-bronze-light: #421908;
+  --indigo-dark: #516189;
+  --seashell-dark: #FBF7F4;
+  --tea-green: #D2ECC5;
+  --tea-green-dark: #7E8E76;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -358,6 +363,9 @@ template {
 /* =============
     Base
 ============= */
+body {
+  background-color: var(--seashell-dark);
+}
 body p, body h1, body h2, body h3, body h4 {
   margin: 0;
   padding: 0;
@@ -379,6 +387,51 @@ body ul {
 
 .base-space {
   margin-top: 30px;
+}
+
+.base-input {
+  background-color: var(--seashell-dark);
+  border-radius: 0 0 8px 8px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  padding-left: 16px;
+  color: var(--champagne-pink-dark);
+  border: 1.5px solid var(--champagne-pink-dark);
+  font-size: 1rem;
+}
+
+.icon-input {
+  background-color: var(--seashell-dark);
+  border-radius: 0 0 8px 8px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  padding-left: 16px;
+  color: var(--champagne-pink-dark);
+  border: 1.5px solid var(--champagne-pink-dark);
+  display: flex;
+  font-size: 1rem;
+}
+.icon-input .i {
+  position: absolute;
+}
+.icon-input .icon {
+  padding: 10px 0;
+  margin: 0;
+  color: var(--champagne-pink-dark);
+  min-width: 20px;
+  text-align: center;
+}
+.icon-input input {
+  background-color: transparent;
+  border: none;
+  text-align: left;
+  padding-left: 10px;
+}
+.icon-input a:link, .icon-input a:visited {
+  color: var(--champagne-pink-dark);
+}
+.icon-input a:link:hover, .icon-input a:link:active, .icon-input a:visited:hover, .icon-input a:visited:active {
+  color: var(--champagne-pink-dark);
 }
 
 /* =============
@@ -433,9 +486,35 @@ h1, h2, h3, h4, p {
   text-align: center;
 }
 
+.bolded {
+  font-weight: 600;
+}
+
+.standard-links {
+  color: var(--indigo-dark);
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+}
 /* =============
     Buttons
 ============= */
+.base-btn {
+  background-color: var(--tea-green-dark);
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 8px 20px;
+  color: var(--seashell-dark);
+  border-radius: 0 0 8px 8px;
+}
+.base-btn a:link, .base-btn a:visited {
+  background-color: var(--indigo-dark);
+}
+.base-btn a:link:hover, .base-btn a:link:active, .base-btn a:visited:hover, .base-btn a:visited:active {
+  background-color: var(--indigo-dark);
+}
+
 /* =============
     Forms
 ============= */
@@ -464,18 +543,33 @@ textarea {
     Footer
 ============= */
 footer #newsletter {
+  padding-top: 42px;
   display: grid;
   grid-template-columns: 38px auto 38px;
   grid-template-areas: ". section .";
+  background-color: var(--tea-green);
+  border-radius: 0 0 16px 16px;
 }
 footer #newsletter > div {
   grid-area: section;
 }
 footer #newsletter form {
   display: flex;
+  margin-bottom: 42px;
 }
-footer #icons {
+footer #newsletter form input {
+  width: 100%;
+  margin-right: 7px;
+}
+footer #newsletter h3 {
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+footer #brand-icons {
   display: flex;
+}
+footer #newsletter-btn {
+  margin-left: 16px;
 }
 
 /* =============
