--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -46,6 +46,12 @@ body{
 }
 
 
+//ICON INPUT HTML SAMPLE
+// <div class="base-input">
+//                     <i class="fa-solid fa-magnifying-glass icon"></i>
+//                     <input type="text" name="email" placeholder="Email:">
+//                 </div>
+
 .icon-input{
     background-color: var(--seashell-dark);
     border-radius: 0 0 8px 8px;
