--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -33,9 +33,23 @@ footer{
 
     #brand-icons{
         display: flex;
+        justify-content: center;
+        li{
+            margin: 10px;
+            color: var(--ruddy-bronze-light);
+            
+        }
+       
+    }
+
+    #copywrite{
+        text-align: center;
+        margin-bottom: 40px;
     }
 
     #newsletter-btn{
         margin-left: 16px;
     }
+
+
 }
