--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -10,7 +10,10 @@ $screen-sm-min: 432px;
 $screen-md-min: 834px;
 
 // Large tablets and small desktops
-$screen-lg-min: 1024px;
+$screen-lg-min: 1280px;
+
+// X-Large desktops
+$screen-xl-min: 1440px;
 
 
 
