--- a/dev/scss/sections/homepage/_cafe.scss
+++ b/dev/scss/sections/homepage/_cafe.scss
@@ -3,5 +3,18 @@
 ============= */
 
 #cafe{
-
+    #cafe-hero{
+        width: 100%;
+        height: 40vh;
+        background-image: url('../img/homepage/cafe-preview.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 0% 70%;
+    }
+    // aside{
+    //     img{
+    //         max-width: 100%;
+    //         max-height: auto;
+    //     }
+    // }
 }
