--- a/dev/scss/sections/homepage/_community.scss
+++ b/dev/scss/sections/homepage/_community.scss
@@ -3,5 +3,18 @@
 ============= */
 
 #community{
-
+    #community-hero{
+        width: 100%;
+        height: 30vh;
+        
+        background-image: url('../img/homepage/community.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 0% 70%;
+        @include md{
+            width: 100%;
+            height: 35vh;
+        }
+        
+    }
 }
