--- a/dev/scss/sections/homepage/_services.scss
+++ b/dev/scss/sections/homepage/_services.scss
@@ -1,43 +1,72 @@
 #services{
 
-    #floral-img{
-        width: 100%;
-        height: 30vw;
-        background-image: url('../img/homepage/floral.png');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: 0% 100%;
-        // @include md{
-        //     width: 35vw;
-        //     height:35vw;
-        // }
+    // #floral-img{
+    //     width: 100%;
+    //     height: 30vw;
+    //     background-image: url('../img/homepage/floral.png');
+    //     background-size: contain;
+    //     background-repeat: no-repeat;
+    //     background-position: 0% 100%;
+    //     @include md{
+    //         width: 35vw;
+    //         height:35vw;
+    //     }
+    //     @include lg{
+    //         width: 15vw;
+    //         height:14vw;
+    //     }
         
-    }
-    #plants-img{
-        width: 100%;
-        height:30vw;
-        background-image: url('../img/homepage/plants.png');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: 0% 100%;
         
-    }
-    #cafe-img{
-        width: 100%;
-        height:30vw;
-        background-image: url('../img/homepage/coffee-cup.png');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: 0% 100%;
-    }
-    #gifts-img{
-        width: 100%;
-        height:30vw;
-        background-image: url('../img/homepage/candles.png');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: 0% 100%;
-    }
+    // }
+    // #plants-img{
+    //     width: 100%;
+    //     height:30vw;
+    //     background-image: url('../img/homepage/plants.png');
+    //     background-size: contain;
+    //     background-repeat: no-repeat;
+    //     background-position: 0% 100%;
+    //     @include md{
+    //         width: 35vw;
+    //         height:35vw;
+    //     }
+    //     @include lg{
+    //         width: 15vw;
+    //         height:14vw;
+    //     }
+        
+    // }
+    // #cafe-img{
+    //     width: 100%;
+    //     height:30vw;
+    //     background-image: url('../img/homepage/coffee-cup.png');
+    //     background-size: contain;
+    //     background-repeat: no-repeat;
+    //     background-position: 0% 100%;
+    //     @include md{
+    //         width: 35vw;
+    //         height:35vw;
+    //     }
+    //     @include lg{
+    //         width: 100%;
+    //         height:14vw;
+    //     }
+    // }
+    // #gifts-img{
+    //     width: 100%;
+    //     height: 30vw;
+    //     background-image: url('../img/homepage/candles.png');
+    //     background-size: contain;
+    //     background-repeat: no-repeat;
+    //     background-position: 0% 100%;
+    //     @include md{
+    //         width: 35vw;
+    //         height:35vw;
+    //     }
+    //     @include lg{
+    //         width: 15vw;
+    //         height:14vw;
+    //     }
+    // }
 
     
 }
@@ -70,7 +99,10 @@
         @include md{
             grid-template-columns: 120px auto auto 120px;
          
-            
+        }
+        @include lg{
+            grid-template-columns: auto 195px 195px 195px 195px auto;
+            grid-template-areas: ". floral plants cafe gifts .";
         }
     }
     
@@ -80,9 +112,14 @@
     }
     img{
         padding-top: 6px;
-        max-width: 100%;
-        max-height: auto;
+        min-width: 188px;
+        min-height: 188px;
+       
+       
+        
         // width: 100%;
+        // height: 60.5%;
+        // width5 100%;
     }
     p{
         padding-top: 6px;
