--- a/dev/scss/sections/homepage/_cafe.scss
+++ b/dev/scss/sections/homepage/_cafe.scss
@@ -5,11 +5,19 @@
 #cafe{
     #cafe-hero{
         width: 100%;
-        height: 40vh;
+        height: 20vh;
         background-image: url('../img/homepage/cafe-preview.png');
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
         background-position: 0% 70%;
+        @include md{
+            background-position: 80% 100%;
+            height: 30vh;
+        }
+        @include lg{
+            height: 35vh;
+        }
+        
     
     }
 
