--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -4,5 +4,58 @@
 
 
 header{
+
+    div{
+        display: grid;
+    grid-template-columns: 47% auto;
+    }
+
+
+    background-color: var(--seashell-dark);
+    border-radius: 0 0 16px 16px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    #logo-container{
+        display: flex;
+        align-items: center;
+        #icons-head{
+            margin-left: auto;
+            margin-right: 16px;
+         
+        }
+        
+      
+        // justify-self: flex-end;
+    }
     
+    
+    }
+
+    #burger-container{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        align-content: center;
+
+        div{
+      
+
+        @include lg{
+            display: none;
+            
+        }
+
+        
+    }
+
+    #burger-btn{
+        background: none;
+        border: none;
+        
+        padding: 16px;
+
+        
+    }
 }
