--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -384,12 +384,12 @@ body ul {
 .base-grid > div {
   grid-area: section;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   .base-grid {
     grid-template-columns: auto 598px auto;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   .base-grid {
     grid-template-columns: auto 800px auto;
   }
@@ -447,10 +447,32 @@ body ul {
 .hide-till-md {
   display: none;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   .hide-till-md {
     display: block;
   }
+}
+
+.hide-till-lg {
+  display: none;
+}
+@media (min-width: 1024px) {
+  .hide-till-lg {
+    display: inline-block;
+  }
+}
+
+.hide-at-md {
+  display: inline-block;
+}
+@media (min-width: 1024px) {
+  .hide-at-md {
+    display: none;
+  }
+}
+
+.show-menu {
+  display: block !important;
 }
 
 /* =============
@@ -555,9 +577,78 @@ textarea {
 /* =============
     Navigation
 ============= */
+a:link,
+a:visited {
+  text-decoration: none;
+  transition: 0.25s;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav {
+  height: 100vh;
+  padding: 16px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 70vw;
+  box-sizing: border-box;
+}
+@media (min-width: 1024px) {
+  nav {
+    display: block;
+    height: 50%;
+    padding: 0;
+    position: relative;
+    width: 100%;
+  }
+}
+
 /* =============
     Header
 ============= */
+header {
+  background-color: var(--seashell-dark);
+  border-radius: 0 0 16px 16px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+header div {
+  display: grid;
+  grid-template-columns: 47% auto;
+}
+header #logo-container {
+  display: flex;
+  align-items: center;
+}
+header #logo-container #icons-head {
+  margin-left: auto;
+  margin-right: 16px;
+}
+
+#burger-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+}
+@media (min-width: 1024px) {
+  #burger-container div {
+    display: none;
+  }
+}
+#burger-container #burger-btn {
+  background: none;
+  border: none;
+  padding: 16px;
+}
+
 /* =============
     Footer
 ============= */
@@ -599,7 +690,7 @@ footer #copywrite {
 footer #newsletter-btn {
   margin-left: 16px;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   footer {
     display: grid;
     grid-template-columns: auto 598px auto;
@@ -609,7 +700,7 @@ footer #newsletter-btn {
     grid-area: content;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   footer {
     grid-template-columns: auto 800px auto;
   }
@@ -634,11 +725,41 @@ footer #newsletter-btn {
   width: 100vw;
   filter: drop-shadow(-10, -3, #421908);
 }
+@media (min-width: 768px) {
+  #homepage-hero #hero-copy {
+    top: 150px;
+  }
+}
+@media (min-width: 1024px) {
+  #homepage-hero #hero-copy {
+    top: 175px;
+  }
+}
+@media (min-width: 1200px) {
+  #homepage-hero #hero-copy {
+    top: 200px;
+  }
+}
 #homepage-hero #hero-copy h1 {
   font-family: "BenchNine", sans-serif;
   font-size: 2rem;
   color: var(--white);
   letter-spacing: 1rem;
+}
+@media (min-width: 768px) {
+  #homepage-hero #hero-copy h1 {
+    font-size: 3.9375rem;
+  }
+}
+@media (min-width: 1024px) {
+  #homepage-hero #hero-copy h1 {
+    font-size: 5.9375rem;
+  }
+}
+@media (min-width: 1200px) {
+  #homepage-hero #hero-copy h1 {
+    font-size: 6.6875rem;
+  }
 }
 #homepage-hero #hero-copy h2 {
   font-family: "Playfair Display", serif;
@@ -646,6 +767,23 @@ footer #newsletter-btn {
   color: var(--white);
   letter-spacing: 0.5rem;
   margin-top: 20px;
+}
+@media (min-width: 768px) {
+  #homepage-hero #hero-copy h2 {
+    font-size: 1.5rem;
+    margin-top: 35px;
+  }
+}
+@media (min-width: 1024px) {
+  #homepage-hero #hero-copy h2 {
+    margin-top: 50px;
+    font-size: 2.3125rem;
+  }
+}
+@media (min-width: 1024px) {
+  #homepage-hero #hero-copy h2 {
+    font-size: 2.625rem;
+  }
 }
 
 #services #floral-img {
@@ -656,19 +794,19 @@ footer #newsletter-btn {
   background-repeat: no-repeat;
   background-position: 0% 100%;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   #services #floral-img {
     width: 100%;
     height: 25vw;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   #services #floral-img {
-    width: 13vw;
-    height: 13vw;
+    width: 15vw;
+    height: 15vw;
   }
 }
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   #services #floral-img {
     width: 220px;
     height: 220px;
@@ -682,19 +820,19 @@ footer #newsletter-btn {
   background-repeat: no-repeat;
   background-position: 0% 100%;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   #services #plants-img {
     width: 100%;
     height: 25vw;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   #services #plants-img {
-    width: 13vw;
-    height: 13vw;
+    width: 15vw;
+    height: 15vw;
   }
 }
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   #services #plants-img {
     width: 220px;
     height: 220px;
@@ -708,19 +846,19 @@ footer #newsletter-btn {
   background-repeat: no-repeat;
   background-position: 0% 100%;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   #services #cafe-img {
     width: 100%;
     height: 25vw;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   #services #cafe-img {
-    width: 13vw;
-    height: 13vw;
+    width: 15vw;
+    height: 15vw;
   }
 }
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   #services #cafe-img {
     width: 220px;
     height: 220px;
@@ -734,20 +872,20 @@ footer #newsletter-btn {
   background-repeat: no-repeat;
   background-position: 0% 100%;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   #services #gifts-img {
     width: 100%;
     height: 25vw;
     background-position: 0% 50%;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   #services #gifts-img {
-    width: 13vw;
-    height: 13vw;
+    width: 15vw;
+    height: 15vw;
   }
 }
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   #services #gifts-img {
     width: 220px;
     height: 220px;
@@ -771,20 +909,20 @@ footer #newsletter-btn {
 .service-grid ul #gifts {
   grid-area: gifts;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   .service-grid ul {
     gap: 16px;
     grid-template-columns: auto 299px 299px auto;
     grid-template-areas: ". floral plants ." ". cafe gifts .";
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   .service-grid ul {
     grid-template-columns: auto 195px 195px 195px 195px auto;
     grid-template-areas: ". floral plants cafe gifts .";
   }
 }
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   .service-grid ul {
     grid-template-columns: auto 220px 220px 220px 220px auto;
   }
@@ -798,6 +936,7 @@ footer #newsletter-btn {
 
 #service-cards-all {
   background-color: var(--champagne-pink-light);
+  border-radius: 0 0 16px 16px;
   padding-top: 8px;
   padding-bottom: 16px;
 }
@@ -834,18 +973,18 @@ footer #newsletter-btn {
   background-repeat: no-repeat;
   background-position: 0% 70%;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   #cafe #cafe-hero {
     background-position: 80% 100%;
     height: 30vh;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   #cafe #cafe-hero {
     height: 35vh;
   }
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   #cafe .text-grid {
     display: grid;
     grid-template-columns: 33% 33% auto;
@@ -864,13 +1003,13 @@ footer #newsletter-btn {
   background-repeat: no-repeat;
   background-position: 45% 35%;
 }
-@media (min-width: 834px) {
+@media (min-width: 768px) {
   #community #community-hero {
     background-position: 45% 100%;
     height: 30vh;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   #community #community-hero {
     height: 35vh;
   }
