--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -1,3 +1,36 @@
 /* =============
     Navigation
 ============= */
+
+a:link,
+a:visited {
+    text-decoration: none;
+    transition: 0.25s;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav{
+    // display: none;
+
+    height: 100vh;
+    padding: 16px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 70vw;
+    box-sizing: border-box;
+
+    @include lg {
+        display: block;
+
+        height: 50%;
+        padding: 0;
+        position: relative;
+        width: 100%;
+    }
+}
