--- a/dev/scss/sections/homepage/_services.scss
+++ b/dev/scss/sections/homepage/_services.scss
@@ -13,8 +13,8 @@
  
         }
         @include lg{
-            width: 13vw;
-            height:13vw;
+            width: 15vw;
+            height:15vw;
         }
         @include xl{
             width: 220px;
@@ -36,8 +36,8 @@
         
         }
         @include lg{
-            width: 13vw;
-            height:13vw;
+            width: 15vw;
+            height:15vw;
         }
         @include xl{
             width: 220px;
@@ -57,8 +57,8 @@
             height: 25vw;
         }
         @include lg{
-            width: 13vw;
-            height:13vw;
+            width: 15vw;
+            height:15vw;
         }
         @include xl{
             width: 220px;
@@ -78,8 +78,8 @@
             background-position: 0% 50%;
         }
         @include lg{
-            width: 13vw;
-            height:13vw;
+            width: 15vw;
+            height:15vw;
         }
         @include xl{
             width: 220px;
@@ -156,6 +156,7 @@
 
 #service-cards-all{
     background-color: var(--champagne-pink-light);
+    border-radius: 0 0 16px 16px;
     padding-top: 8px;
     padding-bottom: 16px;
 }
