--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -2,6 +2,21 @@
     Buttons
 ============= */
 
+
+//strip buttons of style defaults, hover pointer
+button{
+    border-style: none;
+    background-color: transparent;
+    cursor: pointer;
+    a:link, a:visited{
+        
+        &:hover, &:active{
+            
+        }
+    }
+}
+
+
 .base-btn{
     background-color: var(--tea-green-dark);
     border: none;
@@ -18,6 +33,8 @@
 
         &:hover, &:active{
             background-color: var(--indigo-dark);
+            
         }
     }
 }
+
