--- a/dev/scss/sections/homepage/_community.scss
+++ b/dev/scss/sections/homepage/_community.scss
@@ -5,20 +5,24 @@
 #community{
     #community-hero{
         width: 100%;
-        height: 20vh;
+        height: 30vh;
         
         background-image: url('../img/homepage/community.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: 45% 35%;
         @include md{
-            background-position: 45% 100%;
+            background-position: 45% 40%;
             height: 30vh;
         }
         @include lg{
             height: 35vh;
         }
         
+    }
+
+    a{
+        color: var(--ruddy-bronze-dark);
     }
 
 }
